--- a/screen.ui
+++ b/screen.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>500</width>
+    <width>604</width>
     <height>500</height>
    </rect>
   </property>
@@ -23,8 +23,7 @@
    <string notr="true">QPushButton {
     color: #333;
     border: 2px solid #888;
-    border-radius: 3px;
-   
+    border-radius: 10px;
    background-color: #888;
     padding: 5px;
     }
@@ -119,7 +118,7 @@ QPushButton:pressed {
                 <property name="maximumSize">
                  <size>
                   <width>16777215</width>
-                  <height>50</height>
+                  <height>100</height>
                  </size>
                 </property>
                 <layout class="QHBoxLayout" name="horizontalLayout_6">
@@ -178,7 +177,7 @@ QPushButton:pressed {
                 <property name="maximumSize">
                  <size>
                   <width>16777215</width>
-                  <height>50</height>
+                  <height>100</height>
                  </size>
                 </property>
                 <layout class="QHBoxLayout" name="horizontalLayout_4">
@@ -244,7 +243,7 @@ QPushButton:pressed {
                  <item>
                   <widget class="QStackedWidget" name="function_stacked_page">
                    <property name="currentIndex">
-                    <number>1</number>
+                    <number>0</number>
                    </property>
                    <widget class="QWidget" name="slider_page">
                     <layout class="QHBoxLayout" name="horizontalLayout_13">
@@ -255,7 +254,7 @@ QPushButton:pressed {
                          <property name="maximumSize">
                           <size>
                            <width>16777215</width>
-                           <height>50</height>
+                           <height>100</height>
                           </size>
                          </property>
                          <layout class="QHBoxLayout" name="horizontalLayout_11">
@@ -275,21 +274,21 @@ QPushButton:pressed {
                           <item>
                            <layout class="QHBoxLayout" name="horizontalLayout_12">
                             <item>
-                             <widget class="QPushButton" name="zoom_out_button_3">
+                             <widget class="QPushButton" name="slider_zoom_out_button">
                               <property name="text">
                                <string>-</string>
                               </property>
                              </widget>
                             </item>
                             <item>
-                             <widget class="QLabel" name="amplify_ratio_label_3">
+                             <widget class="QLabel" name="slider_amplify_button">
                               <property name="text">
                                <string>100%</string>
                               </property>
                              </widget>
                             </item>
                             <item>
-                             <widget class="QPushButton" name="zoom_in_button_3">
+                             <widget class="QPushButton" name="slider_zoom_in_button">
                               <property name="text">
                                <string>+</string>
                               </property>
@@ -301,13 +300,6 @@ QPushButton:pressed {
                            <widget class="QPushButton" name="pushButton_7">
                             <property name="text">
                              <string>Reset</string>
-                            </property>
-                           </widget>
-                          </item>
-                          <item>
-                           <widget class="QLabel" name="resolution_label_3">
-                            <property name="text">
-                             <string>(0,0)</string>
                             </property>
                            </widget>
                           </item>
@@ -344,7 +336,7 @@ QPushButton:pressed {
                            <rect>
                             <x>0</x>
                             <y>0</y>
-                            <width>335</width>
+                            <width>439</width>
                             <height>287</height>
                            </rect>
                           </property>
@@ -358,7 +350,7 @@ QPushButton:pressed {
                             </rect>
                            </property>
                            <property name="text">
-                            <string>TextLabel</string>
+                            <string/>
                            </property>
                           </widget>
                           <widget class="QLabel" name="slide_b_label">
@@ -371,7 +363,7 @@ QPushButton:pressed {
                             </rect>
                            </property>
                            <property name="text">
-                            <string>TextLabel</string>
+                            <string/>
                            </property>
                           </widget>
                          </widget>
@@ -390,7 +382,7 @@ QPushButton:pressed {
                          <property name="maximumSize">
                           <size>
                            <width>16777215</width>
-                           <height>50</height>
+                           <height>100</height>
                           </size>
                          </property>
                          <layout class="QHBoxLayout" name="horizontalLayout_5">
@@ -457,21 +449,21 @@ QPushButton:pressed {
                            </layout>
                           </item>
                           <item>
-                           <widget class="QPushButton" name="pushButton_5">
+                           <widget class="QPushButton" name="reset_button">
                             <property name="text">
                              <string>Reset</string>
                             </property>
                            </widget>
                           </item>
                           <item>
-                           <widget class="QLabel" name="resolution_label">
+                           <widget class="QLabel" name="similarity_label">
                             <property name="text">
-                             <string>(0,0)</string>
+                             <string>Similarity: </string>
                             </property>
                            </widget>
                           </item>
                           <item>
-                           <widget class="QSlider" name="horizontalSlider">
+                           <widget class="QSlider" name="ratioSlider">
                             <property name="minimum">
                              <number>0</number>
                             </property>
@@ -490,12 +482,19 @@ QPushButton:pressed {
                            </widget>
                           </item>
                           <item>
-                           <widget class="QLineEdit" name="lineEdit">
+                           <widget class="QLineEdit" name="ratio_lineEdit">
                             <property name="maximumSize">
                              <size>
-                              <width>30</width>
+                              <width>50</width>
                               <height>16777215</height>
                              </size>
+                            </property>
+                           </widget>
+                          </item>
+                          <item>
+                           <widget class="QPushButton" name="save_button">
+                            <property name="text">
+                             <string>Save</string>
                             </property>
                            </widget>
                           </item>
@@ -512,7 +511,7 @@ QPushButton:pressed {
                            <rect>
                             <x>0</x>
                             <y>0</y>
-                            <width>335</width>
+                            <width>439</width>
                             <height>302</height>
                            </rect>
                           </property>
@@ -574,7 +573,7 @@ QPushButton:pressed {
                              <rect>
                               <x>0</x>
                               <y>0</y>
-                              <width>163</width>
+                              <width>215</width>
                               <height>52</height>
                              </rect>
                             </property>
@@ -633,7 +632,7 @@ QPushButton:pressed {
                              <rect>
                               <x>0</x>
                               <y>0</y>
-                              <width>162</width>
+                              <width>214</width>
                               <height>52</height>
                              </rect>
                             </property>
